# rust-store-core

./: Cargo.toml  Dockerfile  Readme.md
src/: main.rs
